git remote add origin https://github.com/rajyamgar/CEPT_ADAPT_Presentaion_Flipbook.git

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 
 </head>
 <body>
+    <Br></Br><h1 style="font-size: 25px; text-align: center;"><b>ADAPT-SWM: An Application Design to Assist in Planning for Today and Tomorrow of Solid Waste Management</b></h1>
+
+    <div style="display: grid; grid-template-columns: auto auto; padding: 10px;">
+        <div style="padding: 20px;     text-align: center;"><h4>Page turn Left</h4></div>
+        <div style="padding: 20px;     text-align: center;"><h4></h4>Page turn Right</h4></div>
+      </div>
+
+
 <!-- partial:index.partial.html -->
 <div class="container mx-auto my-10">
     <div class="flip-book" id="demoBookExample">
